<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/dialog_root"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="@dimen/modal_root_layout_padding">

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:textAppearance="?attr/textAppearanceHeadlineMedium" />

  <LinearLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="horizontal">

    <!-- marginStart is added by the default button style. See styles.xml for details. -->
    <Button
      android:id="@+id/neutral"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="0dp"
      android:layout_marginTop="@dimen/dialog_fragment_view_spacing"
      android:visibility="gone" />

    <Space
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_weight="1" />

    <Button
      android:id="@+id/negative"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dialog_fragment_view_spacing"
      android:visibility="gone" />

    <Button
      android:id="@+id/positive"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dialog_fragment_view_spacing"
      android:visibility="gone" />

  </LinearLayout>

</LinearLayout>
