<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:padding="@dimen/modal_root_layout_padding">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/processing_payment"
    android:textAppearance="?attr/textAppearanceHeadlineMedium" />

  <Space
    android:layout_width="wrap_content"
    android:layout_height="24dp" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/payment_pending"
    android:textAppearance="?attr/textAppearanceBodyMedium" />

  <Space
    android:layout_width="wrap_content"
    android:layout_height="16dp" />

  <Button
    android:id="@+id/okay"
    style="?attr/buttonBarButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:text="@string/okay" />

</LinearLayout>
